@@ -3955,6 +3955,44 @@ name|defaultCache
 operator|=
 name|cacheDirectory
 expr_stmt|;
+if|if
+condition|(
+name|defaultRepositoryCacheManager
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+literal|"default-cache"
+operator|.
+name|equals
+argument_list|(
+name|defaultRepositoryCacheManager
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|&&
+name|defaultRepositoryCacheManager
+operator|instanceof
+name|DefaultRepositoryCacheManager
+condition|)
+block|{
+operator|(
+operator|(
+name|DefaultRepositoryCacheManager
+operator|)
+name|defaultRepositoryCacheManager
+operator|)
+operator|.
+name|setBasedir
+argument_list|(
+name|defaultCache
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 specifier|public
 name|void
@@ -4263,6 +4301,41 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|defaultRepositoryCacheManager
+operator|!=
+literal|null
+operator|&&
+literal|"default-cache"
+operator|.
+name|equals
+argument_list|(
+name|defaultRepositoryCacheManager
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|&&
+name|defaultRepositoryCacheManager
+operator|instanceof
+name|DefaultRepositoryCacheManager
+condition|)
+block|{
+operator|(
+operator|(
+name|DefaultRepositoryCacheManager
+operator|)
+name|defaultRepositoryCacheManager
+operator|)
+operator|.
+name|setBasedir
+argument_list|(
+name|getDefaultRepositoryCacheBasedir
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|void
@@ -4281,6 +4354,31 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|resolutionCacheManager
+operator|!=
+literal|null
+operator|&&
+name|resolutionCacheManager
+operator|instanceof
+name|DefaultResolutionCacheManager
+condition|)
+block|{
+operator|(
+operator|(
+name|DefaultResolutionCacheManager
+operator|)
+name|resolutionCacheManager
+operator|)
+operator|.
+name|setBasedir
+argument_list|(
+name|getDefaultResolutionCacheBasedir
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|File
@@ -6751,6 +6849,142 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**      * Validates the settings, throwing an {@link IllegalStateException} if the current state is not      * valid.      *       * @throws IllegalStateException      *             if the settings is not valid.      */
+specifier|public
+name|void
+name|validate
+parameter_list|()
+block|{
+name|validateAll
+argument_list|(
+name|resolversMap
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|conflictsManager
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|latestStrategies
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|lockStrategies
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|repositoryCacheManagers
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|reportOutputters
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|circularDependencyStrategies
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|versionMatchers
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|validateAll
+argument_list|(
+name|namespaces
+operator|.
+name|values
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**      * Validates all {@link Validatable} objects in the collection.      *       * @param objects      *            the collection of objects to validate.      * @throws IllegalStateException      *             if any of the objects is not valid.      */
+specifier|private
+name|void
+name|validateAll
+parameter_list|(
+name|Collection
+name|values
+parameter_list|)
+block|{
+for|for
+control|(
+name|Iterator
+name|iterator
+init|=
+name|values
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Object
+name|object
+init|=
+operator|(
+name|Object
+operator|)
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|object
+operator|instanceof
+name|Validatable
+condition|)
+block|{
+operator|(
+operator|(
+name|Validatable
+operator|)
+name|object
+operator|)
+operator|.
+name|validate
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
