@@ -43,6 +43,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -481,6 +491,22 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|core
+operator|.
+name|settings
+operator|.
+name|Validatable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|plugins
 operator|.
 name|latest
@@ -584,6 +610,8 @@ implements|implements
 name|DependencyResolver
 implements|,
 name|HasLatestStrategy
+implements|,
+name|Validatable
 block|{
 comment|/**      * True if parsed ivy files should be validated against xsd, false if they should not, null if      * default behaviur should be used      */
 specifier|private
@@ -1030,6 +1058,19 @@ operator|==
 literal|null
 condition|)
 block|{
+name|initLatestStrategyFromSettings
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|latestStrategy
+return|;
+block|}
+specifier|private
+name|void
+name|initLatestStrategyFromSettings
+parameter_list|()
+block|{
 if|if
 condition|(
 name|getSettings
@@ -1070,23 +1111,17 @@ operator|==
 literal|null
 condition|)
 block|{
-name|Message
-operator|.
-name|error
+throw|throw
+operator|new
+name|IllegalStateException
 argument_list|(
-literal|"unknown latest strategy: "
+literal|"unknown latest strategy '"
 operator|+
 name|latestStrategyName
+operator|+
+literal|"'"
 argument_list|)
-expr_stmt|;
-name|latestStrategy
-operator|=
-name|getSettings
-argument_list|()
-operator|.
-name|getDefaultLatestStrategy
-argument_list|()
-expr_stmt|;
+throw|;
 block|}
 block|}
 else|else
@@ -1123,10 +1158,6 @@ literal|"impossible to get a latest strategy without ivy instance"
 argument_list|)
 throw|;
 block|}
-block|}
-return|return
-name|latestStrategy
-return|;
 block|}
 specifier|public
 name|void
@@ -1189,6 +1220,19 @@ operator|==
 literal|null
 condition|)
 block|{
+name|initNamespaceFromSettings
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|namespace
+return|;
+block|}
+specifier|private
+name|void
+name|initNamespaceFromSettings
+parameter_list|()
+block|{
 if|if
 condition|(
 name|getSettings
@@ -1221,23 +1265,17 @@ operator|==
 literal|null
 condition|)
 block|{
-name|Message
-operator|.
-name|error
+throw|throw
+operator|new
+name|IllegalStateException
 argument_list|(
-literal|"unknown namespace: "
+literal|"unknown namespace '"
 operator|+
 name|namespaceName
+operator|+
+literal|"'"
 argument_list|)
-expr_stmt|;
-name|namespace
-operator|=
-name|getSettings
-argument_list|()
-operator|.
-name|getSystemNamespace
-argument_list|()
-expr_stmt|;
+throw|;
 block|}
 block|}
 else|else
@@ -1281,10 +1319,6 @@ operator|.
 name|SYSTEM_NAMESPACE
 expr_stmt|;
 block|}
-block|}
-return|return
-name|namespace
-return|;
 block|}
 specifier|public
 name|void
@@ -1623,6 +1657,19 @@ operator|==
 literal|null
 condition|)
 block|{
+name|initRepositoryCacheManagerFromSettings
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|repositoryCacheManager
+return|;
+block|}
+specifier|private
+name|void
+name|initRepositoryCacheManagerFromSettings
+parameter_list|()
+block|{
 if|if
 condition|(
 name|cacheManagerName
@@ -1637,6 +1684,21 @@ operator|.
 name|getDefaultRepositoryCacheManager
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|repositoryCacheManager
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"no default cache manager defined with current settings"
+argument_list|)
+throw|;
+block|}
 block|}
 else|else
 block|{
@@ -1649,11 +1711,36 @@ argument_list|(
 name|cacheManagerName
 argument_list|)
 expr_stmt|;
-block|}
-block|}
-return|return
+if|if
+condition|(
 name|repositoryCacheManager
-return|;
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"unknown cache manager '"
+operator|+
+name|cacheManagerName
+operator|+
+literal|"'. Available caches are "
+operator|+
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|settings
+operator|.
+name|getRepositoryCacheManagers
+argument_list|()
+argument_list|)
+argument_list|)
+throw|;
+block|}
+block|}
 block|}
 specifier|public
 name|void
@@ -1663,6 +1750,15 @@ name|RepositoryCacheManager
 name|repositoryCacheManager
 parameter_list|)
 block|{
+name|this
+operator|.
+name|cacheManagerName
+operator|=
+name|repositoryCacheManager
+operator|.
+name|getName
+argument_list|()
+expr_stmt|;
 name|this
 operator|.
 name|repositoryCacheManager
@@ -1706,6 +1802,21 @@ block|{
 return|return
 name|eventManager
 return|;
+block|}
+specifier|public
+name|void
+name|validate
+parameter_list|()
+block|{
+name|initRepositoryCacheManagerFromSettings
+argument_list|()
+expr_stmt|;
+name|initNamespaceFromSettings
+argument_list|()
+expr_stmt|;
+name|initLatestStrategyFromSettings
+argument_list|()
+expr_stmt|;
 block|}
 specifier|protected
 name|CacheMetadataOptions
