@@ -2455,6 +2455,14 @@ argument_list|(
 name|cache
 argument_list|)
 expr_stmt|;
+name|ivy
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|validate
+argument_list|()
+expr_stmt|;
 name|ResolveReport
 name|report
 init|=
@@ -4383,6 +4391,14 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 argument_list|)
+expr_stmt|;
+name|ivy
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|validate
+argument_list|()
 expr_stmt|;
 name|DefaultRepositoryCacheManager
 name|cacheMgr
