@@ -31,6 +31,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|text
+operator|.
+name|ParseException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|List
@@ -1859,6 +1869,75 @@ name|getRepositoryCacheManager
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testInvalidCache
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IvySettings
+name|settings
+init|=
+operator|new
+name|IvySettings
+argument_list|()
+decl_stmt|;
+name|XmlSettingsParser
+name|parser
+init|=
+operator|new
+name|XmlSettingsParser
+argument_list|(
+name|settings
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|parser
+operator|.
+name|parse
+argument_list|(
+name|XmlSettingsParserTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivysettings-cache-invalid.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"resolver referencing a non existent cache should raise an exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ParseException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|"mycache"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|void
